<resources>
    <string name="app_name">DianDian</string>
    <string name="login_username">用户名</string>
    <string name="login_password">密码</string>
    <string name="login_login">登陆</string>
    <string name="login_register">立即注册</string>
    <string name="login_find_password">找回密码</string>
    <string name="login_password2">确认密码</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="unknow">保密</string>
    <string name="phone_number">手机号</string>
    <string name="gender">性别</string>
    <string name="birthday">生日</string>
    <string name="register_register">注册</string>
    <string name="birthday_title">请选择你的生日</string>
</resources>
